# tomb-of-darius

./: .gitignore  README.md
proto1/: CMakeLists.txt  Makefile  cmake_install.cmake  madame_y  madame_y.cbp  tomb_of_darius  tomb_of_darius.cbp  zcc_opt.def
proto1/Tomb of Darius OSX/Tomb of Darius/: GameView.m
proto1/Tomb of Darius OSX/Tomb of Darius.xcodeproj/: project.pbxproj
proto1/Tomb of Darius OSX/Tomb of Darius/Base.lproj/: MainMenu.xib
proto1/src/: cpc.c  demo.c  maps.c  maps.h  sdl2.c
